# Logfit

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.html  logfit
Graph/: CMakeLists.txt
Graph/Logfit-0.5.run/: Logfit 0.5.run.xml
Graph/Logfit-1.run/: Logfit 1.run.xml
Graph/Logfit-4.run/: Logfit 4.run.xml
Graph/Logfit00.run/: Logfit 0.run.xml
Graph/docs/: leeme.txt
Graph/source/cl/: kernel.cl
Graph/source/cpp/: main.cpp  mainBarnes.cpp  mainOneApiTest.cpp  mainTest.cpp  mainTriaddGraph.cpp  mainTriaddOneApiGraph.cpp
Graph/source/cpp/DataStructures/: BarnesDataStructures.h  ClientDataStructures.h  ProvidedDataStructures.h
Graph/source/cpp/Implementations/: GraphScheduler.h
Graph/source/cpp/Implementations/Bodies/: BarnesBody.h  TestExecutionBody.h  TestOneApiBody.h  TriaddGraphBody.h  TriaddOneApiBody.h
Graph/source/cpp/Implementations/Engines/: DynamicEngine.h  LogFitEngine.h
Graph/source/cpp/Implementations/Scheduler/: GraphScheduler.h
Graph/source/cpp/Interfaces/Scheduler/: IScheduler.h
Graph/source/cpp/Utils/: ConsoleUtils.h
OneApi/: CMakeLists.txt  IOneApiBody.h  OneApiScheduler.cpp  OneApiScheduler.h
Pipeline/: CMakeLists.txt
Pipeline/data/: Dynamic  DynamicDebug  Logfit  LogfitDebug  Logfitmodel  LogfitmodelDebug  Oracle  OracleDebug  Oraclemod  OraclemodDebug  runA.in  runA.sol  runB.in
Pipeline/source/cl/: kernel.cl
Pipeline/source/cpp/: BarnesHut.h  Body.h  main.cpp
Pipeline/source/cpp/DataStructures/: BarnesDataStructures.h
Pipeline/source/cpp/Implementations/Bodies/: BarnesBody.h  TestExecutionBody.h
Pipeline/source/cpp/legacy/: LogFit.h  Scheduler.h  bk.h  main.cpp
TBB2020/: CMakeLists.txt
TBB2020/.run/: GraphTest 1.1.run.xml  OnePipelineTest 1.1.run.xml  OneTest 1.1.run.xml  PipelineTest 1.1.run.xml
TBB2020/source/cpp/: mainTriaddPipeline.cpp
benchmarking/: BarnesGraph  BarnesGraph.1step.chunk.txt  BarnesGraph.1step.txt  BarnesGraph.5step.chunk.txt  BarnesGraph.5step.txt  BarnesGraph.75step.chunk.txt  BarnesGraph.75step.txt  BarnesGraph.good.txt  BarnesGraph.o3.txt  BarnesGraph.process.txt  BarnesGraph.txt  BarnesOneApi  BarnesOneApi.1step.chunk.txt  BarnesOneApi.1step.txt  BarnesOneApi.5step.chunk.txt  BarnesOneApi.5step.txt  BarnesOneApi.75step.chunk.txt  BarnesOneApi.75step.txt  BarnesOneApi.good.txt  BarnesOneApi.o3.txt  BarnesOneApi.process.txt  BarnesOneApi.txt  BarnesOnePipeline  BarnesOnePipeline.1step.chunk.txt  BarnesOnePipeline.1step.txt  BarnesOnePipeline.5step.chunk.txt  BarnesOnePipeline.5step.txt  BarnesOnePipeline.75step.chunk.txt  BarnesOnePipeline.75step.txt  BarnesOnePipeline.good.txt  BarnesOnePipeline.o3.txt  BarnesOnePipeline.process.txt  BarnesOnePipeline.txt  BarnesPipeline  BarnesPipeline.1step.chunk.txt  BarnesPipeline.1step.txt  BarnesPipeline.5step.chunk.txt  BarnesPipeline.5step.txt  BarnesPipeline.75step.chunk.txt  BarnesPipeline.75step.txt  (+17 more)
docs/: index.html
lib/: CMakeLists.txt
lib/DataStructures/: ProvidedDataStructures.h
lib/Helpers/: EngineFactory.h  SchedulerFactory.h
lib/Helpers/Pipeline/: Bundle.h  ParallelFilter.h  SerialFilter.h
lib/Implementations/Engines/: DynamicEngine.h  LogFitEngine.h
lib/Implementations/Scheduler/: GraphScheduler.h  PipelineScheduler.h
lib/Interfaces/Bodies/: IBody.h
lib/Interfaces/Engines/: IEngine.h
lib/Interfaces/Scheduler/: IScheduler.h
lib/include/body/: IBody.h  IGraphBody.h  IOneApiBody.h  IPipelineBody.h
lib/include/scheduler/: GraphScheduler.h  OneApiScheduler.h  OnePipelineScheduler.h  PipelineScheduler.h  SchedulerFactory.h  SchedulerFactory_pipeline.h
lib/include/utils/: Utils.h
lib/lib/DataStructures/: ProvidedDataStructures.h
lib/lib/Helpers/: ConsoleUtils.cpp  ConsoleUtils.h
lib/lib/Helpers/Graph/: DataStructures.cpp
lib/lib/Helpers/Pipeline/: Filter.cpp  OneFilter.cpp  PipelineStructures.cpp
lib/lib/Implementations/Engines/: DynamicEngine.cpp  LogFitEngine.cpp
lib/lib/Implementations/Schedulers/: GraphScheduler.cpp  OneApiScheduler.cpp  OnePipelineScheduler.cpp  PipelineScheduler.cpp
lib/lib/Interfaces/Bodies/: IBody.cpp
lib/lib/Interfaces/Engines/: IEngine.cpp
lib/lib/Interfaces/Schedulers/: IScheduler.cpp
oneAPI2021/: CMakeLists.txt
oneAPI2021/include/engine/: DynamicEngine.h  EngineFactory.h  LogFitEngine.h
oneAPI2021/include/scheduler/: OnePipelineScheduler.h
oneAPI2021/lib/Helpers/: ConsoleUtils.h
oneAPI2021/lib/Helpers/Pipeline/: OneFilter.cpp
oneAPI2021/lib/Implementations/Engines/: DynamicEngine.cpp  LogFitEngine.cpp
oneAPI2021/lib/Implementations/Schedulers/: OnePipelineScheduler.cpp
oneAPI2021/lib/Interfaces/Bodies/: IBody.cpp
oneAPI2021/lib/Interfaces/Engines/: IEngine.cpp
oneAPI2021/source/cl/: kernel.cl
oneAPI2021/source/cpp/: mainGetDevices.cpp  mainTriaddOneApiGraph.cpp  mainTriaddOneApiPipeline.cpp
oneAPI2021/source/cpp/Implementations/Bodies/: TriaddOneApiBody.h
oneApi/vector-add/: vector-add-buffers  vector-add-usm
oneTBB2020/: CMakeLists.txt  README.md
oneTBB2020/.run/: GraphTest 1.1.run.xml  OnePipelineTest 1.1.run.xml  OneTest 1.1.run.xml  PipelineTest 1.1.run.xml
oneTBB2020/docs/: RunBarnes.sh
oneTBB2020/source/cl/: kernel.cl  triaddPipelineSample.cl
oneTBB2020/source/cpp/: mainBarnes.cpp  mainBarnesGraph.cpp  mainBarnesOneApiGraph.cpp  mainBarnesOneApiPipeline.cpp  mainBarnesPipeline.cpp  mainTriaddGraph.cpp  mainTriaddOneApiGraph.cpp  mainTriaddOneApiPipeline.cpp  mainTriaddPipeline.cpp
oneTBB2020/source/cpp/DataStructures/: BarnesGraphDataStructures.h  BarnesOneApiDataStructures.h  BarnesPipelineDataStructures.h  TriaddPipelineDataStructures.h
oneTBB2020/source/cpp/Implementations/Bodies/: BarnesBody.h  BarnesGraphBody.h  BarnesOneApiBody.h  BarnesPipelineBody.h  TriaddGraphBody.h  TriaddOneApiBody.h
oneTBB2020/source/cpp/Implementations/Tests/: TriaddGraphBodyTest.h  TriaddOneApiBodyTest.h  TriaddPipelineBodyTest.h
oneTBB2020/source/cpp/Interfaces/Bodies/: BarnesBody.h
source/cl/: kernel.cl
source/cpp/: BarnesHut.h  Body.h  ConsoleUtils.h  DataStructures.h  Functions.h  GraphLogFit.h  LogFit.h  Scheduler.h  main.cpp
(+15 files in other folders)
